@@ -1,25 +1,31 @@
-/*
+ /*
  * To change this license header, choose License Headers in Project Properties.
  * To change this template file, choose Tools | Templates
  * and open the template in the editor.
  */
 package information;
 
+import java.awt.Color;
+import java.awt.Dimension;
 import java.awt.Graphics;
 import java.awt.Image;
 import java.awt.Toolkit;
+import java.awt.event.ActionEvent;
+import java.awt.event.MouseAdapter;
+import java.awt.event.MouseEvent;
 import java.awt.image.ImageObserver;
 import java.awt.image.ImageProducer;
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
 import java.io.File;
-import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
 import java.io.FileReader;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.RandomAccessFile;
+import java.io.InputStreamReader;
+import java.io.OutputStream;
+import java.io.PrintStream;
 import java.lang.reflect.InvocationTargetException;
 import java.net.HttpURLConnection;
 import java.net.InetAddress;
@@ -28,8 +34,9 @@ import java.net.URL;
 import java.net.UnknownHostException;
 import java.text.DecimalFormat;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.TimeUnit;
 import java.util.logging.Level;
 import java.util.logging.Logger;
@@ -39,22 +46,28 @@ import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
 
 import javax.swing.JFrame;
-import javax.swing.JOptionPane;
 import javax.swing.SwingWorker;
 import java.util.Timer;
 import java.util.TimerTask;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
+import javax.swing.JButton;
+import javax.swing.JComboBox;
+import javax.swing.JLabel;
+import javax.swing.JLayeredPane;
+import javax.swing.JPanel;
 import javax.xml.parsers.ParserConfigurationException;
 
 import org.w3c.dom.Document;
 import org.xml.sax.SAXException;
 
-import net.sf.sevenzipjbinding.ExtractOperationResult;
+/*import net.sf.sevenzipjbinding.ExtractOperationResult;
 import net.sf.sevenzipjbinding.IInArchive;
 import net.sf.sevenzipjbinding.SevenZip;
 import net.sf.sevenzipjbinding.SevenZipNativeInitializationException;
 import net.sf.sevenzipjbinding.impl.RandomAccessFileInStream;
 import net.sf.sevenzipjbinding.simple.ISimpleInArchive;
-import net.sf.sevenzipjbinding.simple.ISimpleInArchiveItem;
+import net.sf.sevenzipjbinding.simple.ISimpleInArchiveItem;*/
 
 /**
  *
@@ -63,11 +76,15 @@ import net.sf.sevenzipjbinding.simple.ISimpleInArchiveItem;
 public class VBox extends javax.swing.JFrame {
     ArrayList<JFrame> testing = new ArrayList<>();
     
+    private Color mainBackground;
+    private Color darkBackground;
+    private Color lightBackground;
+    
     private String information;
     private Boolean[] reachable;
     private String vboxdir;
     private ConfigSettings config;
-    private CreateServer createServer;
+    private CreateServerConnection createServer;
     private ServerList serverListTree;
     private ArrayList<String> serverList;
     private VMServerCreationSystem serverCreation;
@@ -77,11 +94,22 @@ public class VBox extends javax.swing.JFrame {
     private CommandWorker worker;
     private JComponent loadingImage;
     private String tmpServerName;
+    private String mostRecentVM;
+    private Map<String,String> startedVM;
+    
+    private ServersList ServersList;
+    
+    private ArrayList<java.awt.Color> TabSelectColors;
     
     private String downloadDir;
     private String configDir;
     private String isoFile;
     private String virtualboxdir;
+    private String osInformation;
+    private String osType;
+    private ArrayList<String> fixedHost;
+    private int fixedCount;
+    private Map<String,String> osFileInfo;
     
     private int count;
     private int serverProcessCount;
@@ -89,11 +117,18 @@ public class VBox extends javax.swing.JFrame {
     private int[] mouseOrigin;
     
     private Boolean downloading;
+    private Boolean recreateDHCPServer;
+    private JFrame updateDHCPFrameVisible;
+    private JFrame readConfigVisible;
+            
     private String[] newVMInformation;
     private ArrayList<String[]> commandList;
     private ArrayList<String> newServerList;
     private ArrayList<String> currentDownloads;
     private ArrayList<String> commandText;
+    private RunThread run;
+    
+    private Map<String,String> mapServers;
     
     private Boolean setupIPAddress;
     final private Boolean connectionTimedout;
@@ -101,17 +136,117 @@ public class VBox extends javax.swing.JFrame {
     SwingWorker worker1;
     
     public VBox() {
-        initComponents();
+        mainBackground = new java.awt.Color(25,25,25);
+        darkBackground = new java.awt.Color(0,0,0);
+        lightBackground = new java.awt.Color(51,51,51);
+        
+        initComponents();        
         initVariables();
+        
+        ArrayList<String[]> items = new ArrayList<>();
+        items.add(new String[]{"File","Configure Settings"});
+        items.add(new String[]{"Create","Server Creation System","Create Server Connection"});
+        items.add(new String[]{"Help"});
+        CustomMenu menu = new CustomMenu(items,mainBackground,lightBackground,TabSelectColors.get(1),this);
+        
+        menu.setBounds(200,0,400,100);
+        jPanel3.add(menu, 0);
+        
+        menu.setParentComponentCount();
         connectionTimedout = false;
+    }
+    
+    public void ConfigureSettingsMenu(){
+        config.setParent(this);
+        config.setVisible(true);
+    }
+    
+    public void ServerCreationSystemMenu(){
+        serverCreation.setParent(this);
+        serverCreation.setVisible(true);
+    }
+    
+    public void CreateServerConnectionMenu(){
+        createServer.setParent(this);
+        createServer.setVisible(true);
     }
     
     private void initVariables(){
         Toolkit kit = Toolkit.getDefaultToolkit();
         Image img = kit.createImage(getClass().getResource("/information/images/vmicon.png").getFile());
         this.setIconImage(img);
+        
+        vboxdir = "C:\\Program Files\\Oracle\\VirtualBox\\";
+        
+        fixedHost = new ArrayList<>();
         downloading = false;
+        updateDHCPFrameVisible = new JFrame();
+        readConfigVisible = new JFrame();
         isoFile = "";
+        fixedCount = 0;
+        
+        TabSelectColors = new ArrayList<>();
+        TabSelectColors.add(new java.awt.Color(25,25,25));
+        TabSelectColors.add(new java.awt.Color(0,125,0));
+                        
+        jPanel1.setVisible(true);
+        jPanel2.setVisible(false);
+        
+        jLayeredPane5.setVisible(true);
+        
+        OutputStream osOutput = new OutputStream() {
+            @Override
+            public void write(int b) throws IOException {
+                osInformation += (char)b;
+            }
+        };
+        
+        PrintStream osPrinter = new PrintStream(osOutput);
+        System.getProperties().list(osPrinter);
+        
+        String[] osInfo = osInformation.split("\n");
+        StringBuilder builder = new StringBuilder("");
+        builder.append("/information/folder/");
+        for(int i = 0; i < osInfo.length; ++i){
+            if(osInfo[i].contains("sun.desktop")){
+                String[] checkInfo = osInfo[i].split("=");
+                osType = checkInfo[1];
+            }
+        }
+        
+        String osCommands = "/information/folder/";
+        osType = osType.trim();
+        
+        switch(osType){
+            case "windows":
+                osCommands+= "windows_cmds";
+                break;
+            case "linux":
+                osCommands+= "linux_cmds";
+                break;
+            case "apple":
+                osCommands+= "apple_cmds";
+                break;
+            default:
+                osCommands+= "combinded_cmds";
+                break;
+        }
+        
+        recreateDHCPServer = false;
+        osFileInfo = new HashMap<>();
+        this.startedVM = new HashMap<>();
+        
+        File osCommandFile = new File(getClass().getResource(osCommands).getFile());
+        try{
+            BufferedReader osReader = new BufferedReader(new FileReader(osCommandFile));
+            String m = "";
+            while((m = osReader.readLine()) != null){
+                String[] infoHolder = m.split(":",2);
+                osFileInfo.put(infoHolder[0], infoHolder[1]);
+            }
+        }catch(IOException ex){
+            System.out.println(ex);
+        }
         
         setupIPAddress = false;
         this.setLocationRelativeTo(null);
@@ -127,7 +262,7 @@ public class VBox extends javax.swing.JFrame {
         config.setParent(this);
         reconfigurePlacement(config);
         
-        createServer = new CreateServer();
+        createServer = new CreateServerConnection();
         createServer.setVisible(false);
         createServer.setParent(this);
         reconfigurePlacement(createServer);
@@ -137,18 +272,17 @@ public class VBox extends javax.swing.JFrame {
         serverCreation.setParent(this);
         reconfigurePlacement(serverCreation);
         
-        serverListTree = new ServerList();
-        serverListTree.setVisible(false);
-        serverListTree.setParent(this);
-        reconfigurePlacement(serverListTree);
-        
-        serverList = new ArrayList<>();
+        serverList = new ArrayList<>();        
         vmArray = new ArrayList<>();
+        ServersList = new ServersList(this);
+        setupServerHome();
         
         String userdir = System.getProperty("user.home");
         
         downloadDir = userdir+"\\Downloads\\";
         configDir = userdir+"\\VMManagerConfig\\";
+        
+        this.setBackground(java.awt.Color.BLACK);
         
         readInstallFile();
         
@@ -170,6 +304,7 @@ public class VBox extends javax.swing.JFrame {
                 formMousePressed(evt);
             }
         });
+        
         this.addMouseMotionListener(new java.awt.event.MouseMotionAdapter() {
             @Override
             public void mouseDragged(java.awt.event.MouseEvent evt) {
@@ -177,18 +312,23 @@ public class VBox extends javax.swing.JFrame {
             }
         });
         
-        jMenuItem7.setIcon(new ImageIcon(getClass().getResource("/information/images/install.gif")));
-        jMenuItem8.setIcon(new ImageIcon(getClass().getResource("/information/images/vbox.png")));
-        jMenuItem9.setIcon(new ImageIcon(getClass().getResource("/information/images/questionmark.png")));
-        jMenu4.setIcon(new ImageIcon(getClass().getResource("/information/images/questionmark.png")));
-        
-        jLabel8.setIcon(new ImageIcon(getClass().getResource("/information/images/close_button.png")));
-        
-        RunThread run = new RunThread();
+        run = new RunThread();
         run.setParent(this);
         Thread newThread = new Thread(run);
         newThread.setDaemon(true);
         newThread.start();
+    }
+    
+    public JPanel getJPanel2(){
+        return jPanel2;
+    }
+    
+    public void jPanel2SetLayout(javax.swing.GroupLayout layout){
+        jPanel2.setLayout(layout);
+    }
+    
+    public Map<String,String> getOSCommands(){
+        return osFileInfo;
     }
     
     public class RunThread implements Runnable{
@@ -198,8 +338,7 @@ public class VBox extends javax.swing.JFrame {
         public void run() {
             while(continueRun){
                 try {
-                    Thread.sleep(10000);
-                    System.out.println("Refreshing IP Addresses...");
+                    Thread.sleep(100000);
                     parent.setupIPTable();
                 } catch (InterruptedException ex) {
                     Logger.getLogger(VBox.class.getName()).log(Level.SEVERE, null, ex);
@@ -218,6 +357,44 @@ public class VBox extends javax.swing.JFrame {
     
     public void setVBDir(String dirString){
         setVBoxDir(dirString);
+    }
+    
+    public Map<String,String> compileServers(){
+        Map<String,String> servers = new HashMap<>();
+        try{
+            Process process = Runtime.getRuntime().exec(new String[]{vboxdir,"list","vms"});
+            BufferedReader vmreader = new BufferedReader(new InputStreamReader(process.getInputStream()));
+            String l = "";
+            while((l = vmreader.readLine()) != null){
+                Pattern m = Pattern.compile("\"(.*)\" \\{(.*)\\}");
+                Matcher t = m.matcher(l);
+                if(t.find()){
+                    Process vmprocess = Runtime.getRuntime().exec(new String[]{vboxdir,"showvminfo","\""+t.group(1)+"\""});
+                    BufferedReader mb = new BufferedReader(new InputStreamReader(vmprocess.getInputStream()));
+                    String v = "";
+                    while((v = mb.readLine()) != null){
+                        if(v.contains("Host-only Interface")){
+                            for(int i = 0; i < ipAddresses.size(); ++i){
+                                String interfaceName = ipAddresses.get(i)[0].replace("HostInterfaceNetworking-","");
+                                if(v.contains(interfaceName)){
+                                    if(servers.get(interfaceName) == null){
+                                        if(t.group(0) != null){
+                                            servers.put(interfaceName,t.group(1));
+                                        }
+                                    } else {
+                                        servers.put(interfaceName,servers.get(interfaceName)+"|"+t.group(1));
+                                    }
+                                }
+                            }
+                        }
+                    }
+                    servers.put(t.group(1),t.group(1));
+                }
+            }
+        }catch(IOException ex){
+            System.out.println("Error getting servers "+ex);
+        }
+        return servers;
     }
     
     public void setTempServerName(String serverName){
@@ -264,8 +441,8 @@ public class VBox extends javax.swing.JFrame {
     }
     
     public void readInstallFile(){
-        newServerList = new ArrayList<String>();
-        currentDownloads = new ArrayList<String>();
+        newServerList = new ArrayList<>();
+        currentDownloads = new ArrayList<>();
         try{
             BufferedReader read = new BufferedReader(new FileReader(configDir+"resume.vmm"));
             String m;
@@ -357,25 +534,25 @@ public class VBox extends javax.swing.JFrame {
     }
     
     private void readConfigFile(){
-        JFrame jframe2 = new JFrame();
-        jframe2.add(jFileChooser1);
-        
-        jframe2.setBounds(20,20,400,400);
-        jframe2.setLocationRelativeTo(null);
-        
+        readConfigVisible = new JFrame();
+        readConfigVisible.add(jFileChooser1);
+
+        readConfigVisible.setBounds(20,20,400,400);
+        readConfigVisible.setLocationRelativeTo(null);
+
         jFileChooser1.addActionListener((java.awt.event.ActionEvent evt) -> {
             if("CancelSelection".equals(evt.getActionCommand())){
-                jframe2.setVisible(false);
+                readConfigVisible.setVisible(false);
             } else {
                 File selectedFile = jFileChooser1.getSelectedFile();
                 if(selectedFile != null){
                     information = selectedFile.getAbsolutePath();
                     readConfigInformation();
-                    jframe2.setVisible(false);
+                    readConfigVisible.dispose();
                 }
             }
         });
-        jframe2.setVisible(true);
+        readConfigVisible.setVisible(true);
     }
     
     public ArrayList<String> getCommandOutput(){
@@ -391,9 +568,8 @@ public class VBox extends javax.swing.JFrame {
             writeInstallFile();
             
             int contentLength = website.openConnection().getContentLength();
-            Boolean connectionTimedout = false;
             
-            SwingWorker worker = new SwingWorker<String,Void>(){
+            SwingWorker rework = new SwingWorker<String,Void>(){
                 @Override
                 protected String doInBackground() throws Exception {
                     File checkIfFile = new File(downloadDir+target);
@@ -406,7 +582,7 @@ public class VBox extends javax.swing.JFrame {
                     if(checkIfFile.exists()){
                         if(contentLengthHolder == checkIfFile.length()){
                             if(target.contains(".7z")){
-                                extractFile(downloadDir+target);
+                                //extractFile(downloadDir+target);
                             }
                             return "Already downloaded...";
                         } else if(contentLength < checkIfFile.length()){
@@ -434,7 +610,7 @@ public class VBox extends javax.swing.JFrame {
                     
                     InputStream input;
                     try{
-                        connection.setConnectTimeout(5000);
+                        connection.setConnectTimeout(50000);
                         input = connection.getInputStream();
                     }catch(IOException ex){
                         jLayeredPane1.setVisible(true);
@@ -477,14 +653,13 @@ public class VBox extends javax.swing.JFrame {
                         try{
                             getClass().getMethod("downloadFile",cArg).invoke(getClass(),file,target);
                         }catch(IllegalAccessException | IllegalArgumentException | NoSuchMethodException | SecurityException | InvocationTargetException ex){
-                            System.out.println(ex);
+                            System.out.println("Information: "+ex);
                         }
-                        System.out.println("restarting");
                         return "restarting process";
                     }
                     
                     if(target.contains(".7z")){
-                        extractFile(downloadDir+target);
+                        //extractFile(downloadDir+target);
                     }
                     currentDownloads.remove(currentDownload);
                     writeInstallFile();
@@ -496,51 +671,7 @@ public class VBox extends javax.swing.JFrame {
                     
                 }
             };
-            worker.execute();
-        }
-    }
-    
-    private void extractFile(String target){
-        try{
-            SevenZip.initSevenZipFromPlatformJAR();
-            RandomAccessFile randomAccessFile = new RandomAccessFile(target, "r");
-            IInArchive inArchive = SevenZip.openInArchive(null,new RandomAccessFileInStream(randomAccessFile));
-            ISimpleInArchive simpleInArchive = inArchive.getSimpleInterface();
-            for (ISimpleInArchiveItem item : simpleInArchive.getArchiveItems()) {
-                final int[] hash = new int[] { 0 };
-                if (!item.isFolder()) {
-                    File itemFile = new File(downloadDir+item.getPath());
-                    if(!itemFile.exists()){
-                        ExtractOperationResult result;
-                        FileOutputStream writer = new FileOutputStream(downloadDir+item.getPath(),true);
-                        final long[] sizeArray = new long[1];
-                        if(item.getSize() != itemFile.length()){
-                            result = item.extractSlow((byte[] data) -> {
-                                hash[0] ^= Arrays.hashCode(data); // Consume data
-                                try {
-                                    writer.write(data);
-                                } catch (FileNotFoundException ex) {
-                                    Logger.getLogger(VBox.class.getName()).log(Level.SEVERE, null, ex);
-                                } catch (IOException ex) {
-                                    Logger.getLogger(VBox.class.getName()).log(Level.SEVERE, null, ex);
-                                }
-                                sizeArray[0] += data.length;
-                                return data.length; // Return amount of consumed
-                                // data
-                            });
-
-                            if (result == ExtractOperationResult.OK) {
-                                System.out.println(String.format("%9X | %10s | %s", hash[0], sizeArray[0], item.getPath()));
-                            } else {
-                                System.err.println("Error extracting item: " + result);
-                            }
-                        }
-                        writer.close();
-                    }
-                }
-            }
-        } catch(IOException | SevenZipNativeInitializationException ex){
-            System.out.println(ex);
+            rework.execute();
         }
     }
     
@@ -552,30 +683,22 @@ public class VBox extends javax.swing.JFrame {
     private void setupIPRows() throws UnknownHostException, IOException{
         setupVBoxDir();
         ArrayList commandList = new ArrayList<String>();
-        runCommand(new String[]{vboxdir,"list","hostonlyifs"},true,"updateIPInformation",true,"Listing Host Only Adapters");
+        runCommand(new String[]{vboxdir,"list","hostonlyifs"},false,"updateIPInformation",false,"Listing Host Only Adapters");
     }
     
-    public void addInfoToServerProcess(Boolean showFrame){
+    public void addInfoToServerProcess(){
         String tmp = (tmpServerName != null)?tmpServerName:"";
         
         for(int i = 0; i < commandOutput.size(); ++i){
             tmp += ","+commandOutput.get(i);
         }
         vmArray.add(tmp);
-        if(!showFrame){
-            processPreviousInstalls();
-        }
-    }
-    
-    public void addServerInfoToServerList(Boolean showFrame){
-        addInfoToServerProcess(showFrame);
-        if(showFrame){
-            serverListTree.setupServerModel();
-        }
+        processPreviousInstalls();
     }
     
     public void addServerInfoToServerList(){
-        addServerInfoToServerList(true);
+        addInfoToServerProcess();
+        ServersList.setupServerModel();
     }
     
     private Document parseConfigFile() throws ParserConfigurationException, SAXException, IOException{
@@ -588,6 +711,7 @@ public class VBox extends javax.swing.JFrame {
     
     public void setupIPTable(){
         try{
+            jLayeredPane5.setVisible(true);
             setupIPRows();
         } catch(IOException ex){
             System.out.println("IP table Iusse");
@@ -646,7 +770,6 @@ public class VBox extends javax.swing.JFrame {
                 vboxHolder = new String[]{vboxdir,"hostonlyif","create"};
                 break;
         }
-        
         setupVMBox("folder/networkupdate",false);
     } 
     
@@ -655,36 +778,31 @@ public class VBox extends javax.swing.JFrame {
     private void initComponents() {
 
         jFileChooser1 = new javax.swing.JFileChooser();
+        jPanel3 = new javax.swing.JPanel();
+        AdapterTab = new javax.swing.JPanel();
+        AdapterTabText = new javax.swing.JLabel();
+        ServerTab = new javax.swing.JPanel();
+        ServerTabText = new javax.swing.JLabel();
+        jLabel7 = new javax.swing.JLabel();
+        jPanel4 = new javax.swing.JLayeredPane();
+        jLayeredPane3 = new javax.swing.JLayeredPane();
+        jPanel2 = new javax.swing.JPanel();
+        jPanel1 = new javax.swing.JPanel();
         jLayeredPane1 = new javax.swing.JLayeredPane();
         jLayeredPane4 = new javax.swing.JLayeredPane();
-        jLabel5 = new javax.swing.JLabel();
-        jProgressBar1 = new javax.swing.JProgressBar();
-        jLabel4 = new javax.swing.JLabel();
         jLayeredPane2 = new javax.swing.JLayeredPane();
         jLabel6 = new javax.swing.JLabel();
-        jButton2 = new javax.swing.JButton();
         jButton3 = new javax.swing.JButton();
-        jButton1 = new javax.swing.JButton();
         jButton4 = new javax.swing.JButton();
         jLabel2 = new javax.swing.JLabel();
         jScrollPane2 = new javax.swing.JScrollPane();
-        jTable1 = new javax.swing.JTable();
-        jLabel8 = new javax.swing.JLabel();
+        ipTable = new javax.swing.JTable();
         jLabel1 = new javax.swing.JLabel();
-        jMenuBar1 = new javax.swing.JMenuBar();
-        jMenu2 = new javax.swing.JMenu();
-        jMenuItem1 = new javax.swing.JMenuItem();
-        jMenu1 = new javax.swing.JMenu();
-        jMenuItem2 = new javax.swing.JMenuItem();
-        jMenuItem3 = new javax.swing.JMenuItem();
-        jMenuItem4 = new javax.swing.JMenuItem();
-        jMenu3 = new javax.swing.JMenu();
-        jMenuItem5 = new javax.swing.JMenuItem();
-        jMenuItem6 = new javax.swing.JMenuItem();
-        jMenu4 = new javax.swing.JMenu();
-        jMenuItem7 = new javax.swing.JMenuItem();
-        jMenuItem8 = new javax.swing.JMenuItem();
-        jMenuItem9 = new javax.swing.JMenuItem();
+        jLabel4 = new javax.swing.JLabel();
+        jProgressBar1 = new javax.swing.JProgressBar();
+        jLabel5 = new javax.swing.JLabel();
+        jLayeredPane5 = new javax.swing.JLayeredPane();
+        jLabel3 = new javax.swing.JLabel();
 
         jFileChooser1.setOpaque(true);
 
@@ -692,76 +810,195 @@ public class VBox extends javax.swing.JFrame {
         setTitle("VBox Layout");
         setBackground(new java.awt.Color(0, 0, 0));
         setLocation(new java.awt.Point(50, 50));
+        setMaximumSize(new java.awt.Dimension(801, 582));
+        setMinimumSize(new java.awt.Dimension(801, 582));
         setUndecorated(true);
+        setPreferredSize(new java.awt.Dimension(801, 582));
         setResizable(false);
 
+        jPanel3.setBackground(new java.awt.Color(25, 25, 25));
+
+        AdapterTab.setBackground(new java.awt.Color(0, 153, 0));
+        AdapterTab.addMouseListener(new java.awt.event.MouseAdapter() {
+            public void mousePressed(java.awt.event.MouseEvent evt) {
+                AdapterTabMousePressed(evt);
+            }
+        });
+
+        AdapterTabText.setBackground(new java.awt.Color(0, 153, 0));
+        AdapterTabText.setForeground(new java.awt.Color(255, 255, 255));
+        AdapterTabText.setHorizontalAlignment(javax.swing.SwingConstants.CENTER);
+        AdapterTabText.setText("DHCP Adapters");
+        AdapterTabText.setAlignmentX(0.5F);
+        AdapterTabText.setHorizontalTextPosition(javax.swing.SwingConstants.CENTER);
+        AdapterTabText.setIconTextGap(90);
+        AdapterTabText.addMouseListener(new java.awt.event.MouseAdapter() {
+            public void mousePressed(java.awt.event.MouseEvent evt) {
+                AdapterTabTextMousePressed(evt);
+            }
+        });
+
+        javax.swing.GroupLayout AdapterTabLayout = new javax.swing.GroupLayout(AdapterTab);
+        AdapterTab.setLayout(AdapterTabLayout);
+        AdapterTabLayout.setHorizontalGroup(
+            AdapterTabLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+            .addComponent(AdapterTabText, javax.swing.GroupLayout.Alignment.TRAILING, javax.swing.GroupLayout.DEFAULT_SIZE, 110, Short.MAX_VALUE)
+        );
+        AdapterTabLayout.setVerticalGroup(
+            AdapterTabLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+            .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, AdapterTabLayout.createSequentialGroup()
+                .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
+                .addComponent(AdapterTabText)
+                .addContainerGap())
+        );
+
+        ServerTab.setBackground(new java.awt.Color(25, 25, 25));
+        ServerTab.addMouseListener(new java.awt.event.MouseAdapter() {
+            public void mousePressed(java.awt.event.MouseEvent evt) {
+                ServerTabMouseClicked(evt);
+            }
+        });
+
+        ServerTabText.setBackground(new java.awt.Color(0, 153, 0));
+        ServerTabText.setForeground(new java.awt.Color(255, 255, 255));
+        ServerTabText.setHorizontalAlignment(javax.swing.SwingConstants.CENTER);
+        ServerTabText.setText("Servers");
+        ServerTabText.setAlignmentX(0.5F);
+        ServerTabText.setHorizontalTextPosition(javax.swing.SwingConstants.CENTER);
+        ServerTabText.setIconTextGap(90);
+        ServerTabText.addMouseListener(new java.awt.event.MouseAdapter() {
+            public void mousePressed(java.awt.event.MouseEvent evt) {
+                ServerTabTextMouseClicked(evt);
+            }
+        });
+
+        javax.swing.GroupLayout ServerTabLayout = new javax.swing.GroupLayout(ServerTab);
+        ServerTab.setLayout(ServerTabLayout);
+        ServerTabLayout.setHorizontalGroup(
+            ServerTabLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+            .addGroup(ServerTabLayout.createSequentialGroup()
+                .addComponent(ServerTabText, javax.swing.GroupLayout.PREFERRED_SIZE, 72, javax.swing.GroupLayout.PREFERRED_SIZE)
+                .addGap(0, 0, Short.MAX_VALUE))
+        );
+        ServerTabLayout.setVerticalGroup(
+            ServerTabLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+            .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, ServerTabLayout.createSequentialGroup()
+                .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
+                .addComponent(ServerTabText)
+                .addContainerGap())
+        );
+
+        jLabel7.setForeground(new java.awt.Color(255, 255, 255));
+        jLabel7.setIcon(new javax.swing.ImageIcon(getClass().getResource("/information/images/close_button.png"))); // NOI18N
+        jLabel7.setText("close");
+        jLabel7.addMouseListener(new java.awt.event.MouseAdapter() {
+            public void mouseClicked(java.awt.event.MouseEvent evt) {
+                jLabel7MouseClicked(evt);
+            }
+        });
+
+        jPanel4.setMaximumSize(new java.awt.Dimension(369, 32));
+        jPanel4.setMinimumSize(new java.awt.Dimension(369, 32));
+        jPanel4.addMouseListener(new java.awt.event.MouseAdapter() {
+            public void mouseEntered(java.awt.event.MouseEvent evt) {
+                jPanel4MouseEntered(evt);
+            }
+        });
+
+        javax.swing.GroupLayout jPanel4Layout = new javax.swing.GroupLayout(jPanel4);
+        jPanel4.setLayout(jPanel4Layout);
+        jPanel4Layout.setHorizontalGroup(
+            jPanel4Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+            .addGap(0, 369, Short.MAX_VALUE)
+        );
+        jPanel4Layout.setVerticalGroup(
+            jPanel4Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+            .addGap(0, 32, Short.MAX_VALUE)
+        );
+
+        javax.swing.GroupLayout jPanel3Layout = new javax.swing.GroupLayout(jPanel3);
+        jPanel3.setLayout(jPanel3Layout);
+        jPanel3Layout.setHorizontalGroup(
+            jPanel3Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+            .addGroup(jPanel3Layout.createSequentialGroup()
+                .addContainerGap()
+                .addComponent(AdapterTab, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
+                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
+                .addComponent(ServerTab, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
+                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED, 166, Short.MAX_VALUE)
+                .addComponent(jPanel4, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
+                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.UNRELATED)
+                .addComponent(jLabel7)
+                .addContainerGap())
+        );
+        jPanel3Layout.setVerticalGroup(
+            jPanel3Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.TRAILING)
+            .addGroup(jPanel3Layout.createSequentialGroup()
+                .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
+                .addGroup(jPanel3Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING, false)
+                    .addComponent(ServerTab, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
+                    .addComponent(AdapterTab, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
+                .addGap(12, 12, 12))
+            .addGroup(javax.swing.GroupLayout.Alignment.LEADING, jPanel3Layout.createSequentialGroup()
+                .addContainerGap()
+                .addGroup(jPanel3Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+                    .addComponent(jLabel7)
+                    .addComponent(jPanel4, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE))
+                .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
+        );
+
+        jLayeredPane3.setPreferredSize(new java.awt.Dimension(801, 582));
+
+        jPanel2.setAlignmentX(0.0F);
+        jPanel2.setAlignmentY(0.0F);
+        jPanel2.setMaximumSize(new java.awt.Dimension(801, 582));
+        jPanel2.setMinimumSize(new java.awt.Dimension(801, 582));
+        jPanel2.setPreferredSize(new java.awt.Dimension(801, 582));
+
+        javax.swing.GroupLayout jPanel2Layout = new javax.swing.GroupLayout(jPanel2);
+        jPanel2.setLayout(jPanel2Layout);
+        jPanel2Layout.setHorizontalGroup(
+            jPanel2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+            .addGap(0, 801, Short.MAX_VALUE)
+        );
+        jPanel2Layout.setVerticalGroup(
+            jPanel2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+            .addGap(0, 0, Short.MAX_VALUE)
+        );
+
+        jPanel1.setMaximumSize(new java.awt.Dimension(801, 582));
+        jPanel1.setMinimumSize(new java.awt.Dimension(801, 582));
+        jPanel1.setPreferredSize(new java.awt.Dimension(801, 582));
+
         jLayeredPane1.setBackground(new java.awt.Color(51, 51, 51));
+        jLayeredPane1.setBorder(javax.swing.BorderFactory.createLineBorder(new java.awt.Color(51, 51, 51)));
         jLayeredPane1.setAlignmentX(0.0F);
         jLayeredPane1.setAlignmentY(0.0F);
+        jLayeredPane1.setMaximumSize(new java.awt.Dimension(801, 582));
+        jLayeredPane1.setMinimumSize(new java.awt.Dimension(801, 582));
         jLayeredPane1.setOpaque(true);
 
         jLayeredPane4.setBackground(new java.awt.Color(204, 204, 204));
-
-        jLabel5.setForeground(new java.awt.Color(255, 255, 255));
-        jLabel5.setHorizontalAlignment(javax.swing.SwingConstants.CENTER);
-        jLabel5.setText("Beginning Download");
-
-        jProgressBar1.setBackground(new java.awt.Color(255, 255, 255));
-        jProgressBar1.setForeground(new java.awt.Color(0, 204, 51));
-        jProgressBar1.setOpaque(true);
-
-        jLabel4.setForeground(new java.awt.Color(255, 255, 255));
-        jLabel4.setHorizontalAlignment(javax.swing.SwingConstants.CENTER);
-        jLabel4.setText("Loading...");
-
-        jLayeredPane4.setLayer(jLabel5, javax.swing.JLayeredPane.DEFAULT_LAYER);
-        jLayeredPane4.setLayer(jProgressBar1, javax.swing.JLayeredPane.DEFAULT_LAYER);
-        jLayeredPane4.setLayer(jLabel4, javax.swing.JLayeredPane.DEFAULT_LAYER);
 
         javax.swing.GroupLayout jLayeredPane4Layout = new javax.swing.GroupLayout(jLayeredPane4);
         jLayeredPane4.setLayout(jLayeredPane4Layout);
         jLayeredPane4Layout.setHorizontalGroup(
             jLayeredPane4Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-            .addComponent(jLabel4, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
-            .addComponent(jLabel5, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
-            .addComponent(jProgressBar1, javax.swing.GroupLayout.Alignment.TRAILING, javax.swing.GroupLayout.DEFAULT_SIZE, 330, Short.MAX_VALUE)
+            .addGap(0, 330, Short.MAX_VALUE)
         );
         jLayeredPane4Layout.setVerticalGroup(
             jLayeredPane4Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-            .addGroup(jLayeredPane4Layout.createSequentialGroup()
-                .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
-                .addComponent(jLabel4)
-                .addGap(18, 18, 18)
-                .addComponent(jProgressBar1, javax.swing.GroupLayout.PREFERRED_SIZE, 23, javax.swing.GroupLayout.PREFERRED_SIZE)
-                .addGap(18, 18, 18)
-                .addComponent(jLabel5)
-                .addGap(32, 32, 32))
+            .addGap(0, 90, Short.MAX_VALUE)
         );
 
         jLabel6.setForeground(new java.awt.Color(255, 255, 255));
         jLabel6.setText("Current Running Commands:");
-
-        jButton2.setBackground(new java.awt.Color(255, 255, 255));
-        jButton2.setText("Setup File");
-        jButton2.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(java.awt.event.ActionEvent evt) {
-                jButton2ActionPerformed(evt);
-            }
-        });
 
         jButton3.setBackground(new java.awt.Color(255, 255, 255));
         jButton3.setText("Add Adapter");
         jButton3.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 jButton3ActionPerformed(evt);
-            }
-        });
-
-        jButton1.setBackground(new java.awt.Color(255, 255, 255));
-        jButton1.setText("Submit");
-        jButton1.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(java.awt.event.ActionEvent evt) {
-                jButton1ActionPerformed(evt);
             }
         });
 
@@ -780,9 +1017,7 @@ public class VBox extends javax.swing.JFrame {
         jLabel2.setHorizontalTextPosition(javax.swing.SwingConstants.CENTER);
 
         jLayeredPane2.setLayer(jLabel6, javax.swing.JLayeredPane.DEFAULT_LAYER);
-        jLayeredPane2.setLayer(jButton2, javax.swing.JLayeredPane.DEFAULT_LAYER);
         jLayeredPane2.setLayer(jButton3, javax.swing.JLayeredPane.DEFAULT_LAYER);
-        jLayeredPane2.setLayer(jButton1, javax.swing.JLayeredPane.DEFAULT_LAYER);
         jLayeredPane2.setLayer(jButton4, javax.swing.JLayeredPane.DEFAULT_LAYER);
         jLayeredPane2.setLayer(jLabel2, javax.swing.JLayeredPane.DEFAULT_LAYER);
 
@@ -790,16 +1025,12 @@ public class VBox extends javax.swing.JFrame {
         jLayeredPane2.setLayout(jLayeredPane2Layout);
         jLayeredPane2Layout.setHorizontalGroup(
             jLayeredPane2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-            .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, jLayeredPane2Layout.createSequentialGroup()
+            .addGroup(jLayeredPane2Layout.createSequentialGroup()
                 .addContainerGap()
-                .addComponent(jButton2)
-                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                 .addComponent(jButton3)
                 .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                 .addComponent(jButton4)
-                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
-                .addComponent(jButton1)
-                .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
+                .addContainerGap(166, Short.MAX_VALUE))
             .addGroup(jLayeredPane2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                 .addGroup(jLayeredPane2Layout.createSequentialGroup()
                     .addContainerGap()
@@ -813,31 +1044,28 @@ public class VBox extends javax.swing.JFrame {
         );
         jLayeredPane2Layout.setVerticalGroup(
             jLayeredPane2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-            .addGroup(jLayeredPane2Layout.createSequentialGroup()
-                .addContainerGap(116, Short.MAX_VALUE)
+            .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, jLayeredPane2Layout.createSequentialGroup()
+                .addGap(0, 86, Short.MAX_VALUE)
                 .addGroup(jLayeredPane2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
-                    .addComponent(jButton1)
-                    .addComponent(jButton2)
                     .addComponent(jButton3)
-                    .addComponent(jButton4))
-                .addContainerGap())
+                    .addComponent(jButton4)))
             .addGroup(jLayeredPane2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                 .addGroup(jLayeredPane2Layout.createSequentialGroup()
                     .addGap(34, 34, 34)
-                    .addComponent(jLabel2, javax.swing.GroupLayout.PREFERRED_SIZE, 66, javax.swing.GroupLayout.PREFERRED_SIZE)
-                    .addContainerGap(50, Short.MAX_VALUE)))
+                    .addComponent(jLabel2, javax.swing.GroupLayout.PREFERRED_SIZE, 35, javax.swing.GroupLayout.PREFERRED_SIZE)
+                    .addContainerGap(40, Short.MAX_VALUE)))
             .addGroup(jLayeredPane2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                 .addGroup(jLayeredPane2Layout.createSequentialGroup()
                     .addContainerGap()
                     .addComponent(jLabel6)
-                    .addContainerGap(118, Short.MAX_VALUE)))
+                    .addContainerGap(84, Short.MAX_VALUE)))
         );
 
         jScrollPane2.setBorder(javax.swing.BorderFactory.createEmptyBorder(1, 1, 1, 1));
         jScrollPane2.setHorizontalScrollBarPolicy(javax.swing.ScrollPaneConstants.HORIZONTAL_SCROLLBAR_NEVER);
 
-        jTable1.setBorder(javax.swing.BorderFactory.createEmptyBorder(1, 1, 1, 1));
-        jTable1.setModel(new javax.swing.table.DefaultTableModel(
+        ipTable.setBorder(javax.swing.BorderFactory.createEmptyBorder(1, 1, 1, 1));
+        ipTable.setModel(new javax.swing.table.DefaultTableModel(
             new Object [][] {
 
             },
@@ -860,43 +1088,45 @@ public class VBox extends javax.swing.JFrame {
                 return canEdit [columnIndex];
             }
         });
-        jTable1.setToolTipText("testing");
-        jTable1.setColumnSelectionAllowed(true);
-        jTable1.setGridColor(new java.awt.Color(51, 51, 51));
-        jTable1.setSelectionBackground(new java.awt.Color(204, 204, 204));
-        jTable1.setSelectionMode(javax.swing.ListSelectionModel.SINGLE_SELECTION);
-        jTable1.getTableHeader().setReorderingAllowed(false);
-        jTable1.addMouseListener(new java.awt.event.MouseAdapter() {
-            public void mouseClicked(java.awt.event.MouseEvent evt) {
-                jTable1MouseClicked(evt);
+        ipTable.setToolTipText("testing");
+        ipTable.setColumnSelectionAllowed(true);
+        ipTable.setGridColor(new java.awt.Color(51, 51, 51));
+        ipTable.setSelectionBackground(new java.awt.Color(204, 204, 204));
+        ipTable.setSelectionMode(javax.swing.ListSelectionModel.SINGLE_SELECTION);
+        ipTable.getTableHeader().setReorderingAllowed(false);
+        ipTable.addMouseListener(new java.awt.event.MouseAdapter() {
+            public void mousePressed(java.awt.event.MouseEvent evt) {
+                ipTableMousePressed(evt);
             }
         });
-        jScrollPane2.setViewportView(jTable1);
-        jTable1.getColumnModel().getSelectionModel().setSelectionMode(javax.swing.ListSelectionModel.SINGLE_INTERVAL_SELECTION);
-        if (jTable1.getColumnModel().getColumnCount() > 0) {
-            jTable1.getColumnModel().getColumn(0).setResizable(false);
+        jScrollPane2.setViewportView(ipTable);
+        ipTable.getColumnModel().getSelectionModel().setSelectionMode(javax.swing.ListSelectionModel.SINGLE_INTERVAL_SELECTION);
+        if (ipTable.getColumnModel().getColumnCount() > 0) {
+            ipTable.getColumnModel().getColumn(0).setResizable(false);
         }
-
-        jLabel8.setForeground(new java.awt.Color(255, 255, 255));
-        jLabel8.setText("close");
-        jLabel8.setCursor(new java.awt.Cursor(java.awt.Cursor.HAND_CURSOR));
-        jLabel8.addMouseListener(new java.awt.event.MouseAdapter() {
-            public void mouseClicked(java.awt.event.MouseEvent evt) {
-                jLabel8MouseClicked(evt);
-            }
-            public void mouseEntered(java.awt.event.MouseEvent evt) {
-                jLabel8MouseEntered(evt);
-            }
-        });
 
         jLabel1.setForeground(new java.awt.Color(255, 255, 255));
         jLabel1.setText("List of Adapters Currently Active for Virtual Box");
 
+        jLabel4.setForeground(new java.awt.Color(255, 255, 255));
+        jLabel4.setHorizontalAlignment(javax.swing.SwingConstants.CENTER);
+        jLabel4.setText(" ");
+
+        jProgressBar1.setBackground(new java.awt.Color(255, 255, 255));
+        jProgressBar1.setForeground(new java.awt.Color(0, 204, 51));
+        jProgressBar1.setOpaque(true);
+
+        jLabel5.setForeground(new java.awt.Color(255, 255, 255));
+        jLabel5.setHorizontalAlignment(javax.swing.SwingConstants.CENTER);
+        jLabel5.setText(" ");
+
         jLayeredPane1.setLayer(jLayeredPane4, javax.swing.JLayeredPane.DEFAULT_LAYER);
         jLayeredPane1.setLayer(jLayeredPane2, javax.swing.JLayeredPane.DEFAULT_LAYER);
         jLayeredPane1.setLayer(jScrollPane2, javax.swing.JLayeredPane.DEFAULT_LAYER);
-        jLayeredPane1.setLayer(jLabel8, javax.swing.JLayeredPane.DEFAULT_LAYER);
         jLayeredPane1.setLayer(jLabel1, javax.swing.JLayeredPane.DEFAULT_LAYER);
+        jLayeredPane1.setLayer(jLabel4, javax.swing.JLayeredPane.DEFAULT_LAYER);
+        jLayeredPane1.setLayer(jProgressBar1, javax.swing.JLayeredPane.DEFAULT_LAYER);
+        jLayeredPane1.setLayer(jLabel5, javax.swing.JLayeredPane.DEFAULT_LAYER);
 
         javax.swing.GroupLayout jLayeredPane1Layout = new javax.swing.GroupLayout(jLayeredPane1);
         jLayeredPane1.setLayout(jLayeredPane1Layout);
@@ -908,184 +1138,144 @@ public class VBox extends javax.swing.JFrame {
                     .addComponent(jScrollPane2)
                     .addGroup(jLayeredPane1Layout.createSequentialGroup()
                         .addComponent(jLabel1)
-                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
-                        .addComponent(jLabel8))
+                        .addGap(0, 0, Short.MAX_VALUE))
                     .addGroup(jLayeredPane1Layout.createSequentialGroup()
                         .addComponent(jLayeredPane2, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
                         .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
-                        .addComponent(jLayeredPane4, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                        .addGap(0, 0, Short.MAX_VALUE)))
+                        .addGroup(jLayeredPane1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+                            .addGroup(jLayeredPane1Layout.createSequentialGroup()
+                                .addComponent(jLayeredPane4, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
+                                .addGap(0, 65, Short.MAX_VALUE))
+                            .addComponent(jLabel4, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
+                            .addComponent(jLabel5, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
+                            .addComponent(jProgressBar1, javax.swing.GroupLayout.Alignment.TRAILING, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))))
                 .addContainerGap())
         );
         jLayeredPane1Layout.setVerticalGroup(
             jLayeredPane1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
             .addGroup(jLayeredPane1Layout.createSequentialGroup()
                 .addContainerGap()
-                .addGroup(jLayeredPane1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
-                    .addComponent(jLabel1)
-                    .addComponent(jLabel8))
+                .addComponent(jLabel1)
                 .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                 .addComponent(jScrollPane2, javax.swing.GroupLayout.PREFERRED_SIZE, 327, javax.swing.GroupLayout.PREFERRED_SIZE)
                 .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                 .addGroup(jLayeredPane1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                     .addGroup(jLayeredPane1Layout.createSequentialGroup()
+                        .addComponent(jLabel4)
+                        .addGap(18, 18, 18)
+                        .addComponent(jProgressBar1, javax.swing.GroupLayout.PREFERRED_SIZE, 23, javax.swing.GroupLayout.PREFERRED_SIZE)
+                        .addGap(18, 18, 18)
+                        .addComponent(jLabel5)
+                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
+                        .addComponent(jLayeredPane4)
+                        .addGap(33, 33, 33))
+                    .addGroup(jLayeredPane1Layout.createSequentialGroup()
                         .addComponent(jLayeredPane2, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                        .addGap(0, 0, Short.MAX_VALUE))
-                    .addComponent(jLayeredPane4))
-                .addContainerGap())
+                        .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))))
         );
 
-        jMenuBar1.setBackground(new java.awt.Color(0, 0, 0));
-        jMenuBar1.setBorder(javax.swing.BorderFactory.createEmptyBorder(1, 1, 1, 1));
-        jMenuBar1.setForeground(new java.awt.Color(255, 255, 255));
+        javax.swing.GroupLayout jPanel1Layout = new javax.swing.GroupLayout(jPanel1);
+        jPanel1.setLayout(jPanel1Layout);
+        jPanel1Layout.setHorizontalGroup(
+            jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+            .addGap(0, 801, Short.MAX_VALUE)
+            .addGroup(jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+                .addComponent(jLayeredPane1, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE))
+        );
+        jPanel1Layout.setVerticalGroup(
+            jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+            .addGap(0, 582, Short.MAX_VALUE)
+            .addGroup(jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+                .addGroup(jPanel1Layout.createSequentialGroup()
+                    .addGap(0, 0, 0)
+                    .addComponent(jLayeredPane1, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
+                    .addContainerGap()))
+        );
 
-        jMenu2.setBorder(javax.swing.BorderFactory.createEmptyBorder(1, 1, 1, 1));
-        jMenu2.setForeground(new java.awt.Color(255, 255, 255));
-        jMenu2.setText("Setup");
-        jMenu2.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(java.awt.event.ActionEvent evt) {
-                jMenu2ActionPerformed(evt);
-            }
-        });
+        jLayeredPane5.setBackground(new java.awt.Color(51, 51, 51));
+        jLayeredPane5.setMaximumSize(new java.awt.Dimension(801, 582));
+        jLayeredPane5.setMinimumSize(new java.awt.Dimension(801, 582));
+        jLayeredPane5.setOpaque(true);
 
-        jMenuItem1.setBackground(new java.awt.Color(255, 255, 255));
-        jMenuItem1.setText("Configuration");
-        jMenuItem1.setBorder(javax.swing.BorderFactory.createEmptyBorder(1, 1, 1, 1));
-        jMenuItem1.setBorderPainted(true);
-        jMenuItem1.setHorizontalAlignment(javax.swing.SwingConstants.LEFT);
-        jMenuItem1.setOpaque(true);
-        jMenuItem1.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(java.awt.event.ActionEvent evt) {
-                jMenuItem1ActionPerformed(evt);
-            }
-        });
-        jMenu2.add(jMenuItem1);
+        jLabel3.setForeground(new java.awt.Color(255, 255, 255));
+        jLabel3.setHorizontalAlignment(javax.swing.SwingConstants.CENTER);
+        jLabel3.setText("Running IP Table Update ...");
 
-        jMenuBar1.add(jMenu2);
+        jLayeredPane5.setLayer(jLabel3, javax.swing.JLayeredPane.DEFAULT_LAYER);
 
-        jMenu1.setBackground(new java.awt.Color(255, 255, 255));
-        jMenu1.setBorder(javax.swing.BorderFactory.createEmptyBorder(1, 1, 1, 1));
-        jMenu1.setForeground(new java.awt.Color(255, 255, 255));
-        jMenu1.setText("Server Setup");
+        javax.swing.GroupLayout jLayeredPane5Layout = new javax.swing.GroupLayout(jLayeredPane5);
+        jLayeredPane5.setLayout(jLayeredPane5Layout);
+        jLayeredPane5Layout.setHorizontalGroup(
+            jLayeredPane5Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+            .addComponent(jLabel3, javax.swing.GroupLayout.Alignment.TRAILING, javax.swing.GroupLayout.DEFAULT_SIZE, 801, Short.MAX_VALUE)
+        );
+        jLayeredPane5Layout.setVerticalGroup(
+            jLayeredPane5Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+            .addGroup(jLayeredPane5Layout.createSequentialGroup()
+                .addGap(257, 257, 257)
+                .addComponent(jLabel3)
+                .addContainerGap(311, Short.MAX_VALUE))
+        );
 
-        jMenuItem2.setBackground(new java.awt.Color(255, 255, 255));
-        jMenuItem2.setText("Connect To Server");
-        jMenuItem2.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(java.awt.event.ActionEvent evt) {
-                jMenuItem2ActionPerformed(evt);
-            }
-        });
-        jMenu1.add(jMenuItem2);
+        jLayeredPane3.setLayer(jPanel2, javax.swing.JLayeredPane.DEFAULT_LAYER);
+        jLayeredPane3.setLayer(jPanel1, javax.swing.JLayeredPane.DEFAULT_LAYER);
+        jLayeredPane3.setLayer(jLayeredPane5, javax.swing.JLayeredPane.DEFAULT_LAYER);
 
-        jMenuItem3.setBackground(new java.awt.Color(255, 255, 255));
-        jMenuItem3.setText("Display Servers");
-        jMenuItem3.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(java.awt.event.ActionEvent evt) {
-                jMenuItem3ActionPerformed(evt);
-            }
-        });
-        jMenu1.add(jMenuItem3);
-
-        jMenuItem4.setBackground(new java.awt.Color(255, 255, 255));
-        jMenuItem4.setText("Create New Server");
-        jMenuItem4.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(java.awt.event.ActionEvent evt) {
-                jMenuItem4ActionPerformed(evt);
-            }
-        });
-        jMenu1.add(jMenuItem4);
-
-        jMenuBar1.add(jMenu1);
-
-        jMenu3.setBorder(javax.swing.BorderFactory.createEmptyBorder(1, 1, 1, 1));
-        jMenu3.setForeground(new java.awt.Color(255, 255, 255));
-        jMenu3.setText("Continue Installs");
-        jMenu3.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(java.awt.event.ActionEvent evt) {
-                jMenu3ActionPerformed(evt);
-            }
-        });
-
-        jMenuItem5.setBackground(new java.awt.Color(255, 255, 255));
-        jMenuItem5.setText("Resume Configurations");
-        jMenuItem5.setOpaque(true);
-        jMenuItem5.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(java.awt.event.ActionEvent evt) {
-                jMenuItem5ActionPerformed(evt);
-            }
-        });
-        jMenu3.add(jMenuItem5);
-
-        jMenuItem6.setBackground(new java.awt.Color(255, 255, 255));
-        jMenuItem6.setText("Resume Downloads");
-        jMenuItem6.setOpaque(true);
-        jMenuItem6.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(java.awt.event.ActionEvent evt) {
-                jMenuItem6ActionPerformed(evt);
-            }
-        });
-        jMenu3.add(jMenuItem6);
-
-        jMenuBar1.add(jMenu3);
-
-        jMenu4.setBorder(javax.swing.BorderFactory.createEmptyBorder(1, 1, 1, 1));
-        jMenu4.setForeground(new java.awt.Color(255, 255, 255));
-        jMenu4.setText("Help");
-        jMenu4.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(java.awt.event.ActionEvent evt) {
-                jMenu4ActionPerformed(evt);
-            }
-        });
-
-        jMenuItem7.setBackground(new java.awt.Color(255, 255, 255));
-        jMenuItem7.setText("How To's to Linux Installs...");
-        jMenuItem7.setOpaque(true);
-        jMenuItem7.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(java.awt.event.ActionEvent evt) {
-                jMenuItem7ActionPerformed(evt);
-            }
-        });
-        jMenu4.add(jMenuItem7);
-
-        jMenuItem8.setBackground(new java.awt.Color(255, 255, 255));
-        jMenuItem8.setText("Virtual Box Tutorials");
-        jMenuItem8.setOpaque(true);
-        jMenuItem8.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(java.awt.event.ActionEvent evt) {
-                jMenuItem8ActionPerformed(evt);
-            }
-        });
-        jMenu4.add(jMenuItem8);
-
-        jMenuItem9.setBackground(new java.awt.Color(255, 255, 255));
-        jMenuItem9.setText("VManager Help");
-        jMenuItem9.setOpaque(true);
-        jMenuItem9.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(java.awt.event.ActionEvent evt) {
-                jMenuItem9ActionPerformed(evt);
-            }
-        });
-        jMenu4.add(jMenuItem9);
-
-        jMenuBar1.add(jMenu4);
-
-        setJMenuBar(jMenuBar1);
+        javax.swing.GroupLayout jLayeredPane3Layout = new javax.swing.GroupLayout(jLayeredPane3);
+        jLayeredPane3.setLayout(jLayeredPane3Layout);
+        jLayeredPane3Layout.setHorizontalGroup(
+            jLayeredPane3Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+            .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, jLayeredPane3Layout.createSequentialGroup()
+                .addGap(0, 0, Short.MAX_VALUE)
+                .addComponent(jLayeredPane5, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE))
+            .addGroup(jLayeredPane3Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+                .addGroup(jLayeredPane3Layout.createSequentialGroup()
+                    .addComponent(jPanel2, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
+                    .addGap(0, 0, 0)))
+            .addGroup(jLayeredPane3Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+                .addGroup(jLayeredPane3Layout.createSequentialGroup()
+                    .addGap(0, 0, Short.MAX_VALUE)
+                    .addComponent(jPanel1, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
+                    .addGap(0, 0, Short.MAX_VALUE)))
+        );
+        jLayeredPane3Layout.setVerticalGroup(
+            jLayeredPane3Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+            .addGroup(jLayeredPane3Layout.createSequentialGroup()
+                .addComponent(jLayeredPane5, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
+                .addGap(0, 0, Short.MAX_VALUE))
+            .addGroup(jLayeredPane3Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+                .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, jLayeredPane3Layout.createSequentialGroup()
+                    .addGap(0, 0, 0)
+                    .addComponent(jPanel2, javax.swing.GroupLayout.PREFERRED_SIZE, 570, javax.swing.GroupLayout.PREFERRED_SIZE)
+                    .addGap(0, 0, 0)))
+            .addGroup(jLayeredPane3Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+                .addGroup(jLayeredPane3Layout.createSequentialGroup()
+                    .addGap(0, 0, Short.MAX_VALUE)
+                    .addComponent(jPanel1, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
+                    .addGap(0, 0, Short.MAX_VALUE)))
+        );
 
         javax.swing.GroupLayout layout = new javax.swing.GroupLayout(getContentPane());
         getContentPane().setLayout(layout);
         layout.setHorizontalGroup(
             layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-            .addGroup(layout.createSequentialGroup()
-                .addGap(1, 1, 1)
-                .addComponent(jLayeredPane1, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                .addGap(0, 0, Short.MAX_VALUE))
+            .addComponent(jPanel3, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
+            .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+                .addGroup(layout.createSequentialGroup()
+                    .addGap(0, 0, 0)
+                    .addComponent(jLayeredPane3, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
+                    .addGap(0, 0, 0)))
         );
         layout.setVerticalGroup(
             layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
             .addGroup(layout.createSequentialGroup()
-                .addGap(2, 2, 2)
-                .addComponent(jLayeredPane1, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
+                .addComponent(jPanel3, javax.swing.GroupLayout.PREFERRED_SIZE, 46, javax.swing.GroupLayout.PREFERRED_SIZE)
+                .addGap(0, 583, Short.MAX_VALUE))
+            .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+                .addGroup(layout.createSequentialGroup()
+                    .addGap(47, 47, 47)
+                    .addComponent(jLayeredPane3, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
+                    .addGap(0, 0, 0)))
         );
 
         pack();
@@ -1111,7 +1301,7 @@ public class VBox extends javax.swing.JFrame {
         
         List<String[]> obj = new ArrayList<>();
         String[] str = new String [] {
-                "IP Address", "Network Type","Connected"
+                "IP Address", "Network Type","Connected","Servers"
             };
         for(int i = 0; i < adapterNameArray.size();++i){
             ipAddresses.add(new String[]{adapterNameArray.get(i),ipAddressArray.get(i)});
@@ -1119,24 +1309,29 @@ public class VBox extends javax.swing.JFrame {
         
         ArrayList<String[]> node = new ArrayList<>();
         for(int i = 0; i < ipAddresses.size(); ++i){
-            node.add(new String[]{ipAddresses.get(i)[1],ipAddresses.get(i)[0],"testng"});
+            node.add(new String[]{ipAddresses.get(i)[1],ipAddresses.get(i)[0]});
         }
         
         updateDHCP();
         
         int total_host_only = 0;
+        String servers = new String();
+        mapServers = compileServers();
+        
         for(int i = 0; i < node.size(); ++i){
             String[] elm = node.get(i);
             ++total_host_only;
             try{
                 InetAddress inet = InetAddress.getByName(elm[0]);
                 String f = (inet.isReachable(5000))?"true":"false";
-                String[] obj_holder = {elm[0],elm[1],f};
+                
+                elm[1] = elm[1].replace("HostInterfaceNetworking-","");
+                String[] obj_holder = {elm[0],elm[1].replace("VirtualBox Host-Only",""),f,mapServers.get(elm[1])};
                 obj.add(obj_holder);
             } catch(UnknownHostException ex){
-                System.out.println(ex);
+                System.out.println("UnknownHostException "+ex);
             } catch(IOException ex){
-                System.out.println(ex);
+                System.out.println("IOException "+ex);
             }
         }   
         
@@ -1147,140 +1342,401 @@ public class VBox extends javax.swing.JFrame {
             string[i] = info;
         }
         
-        jTable1.setModel(new javax.swing.table.DefaultTableModel(
+        ipTable.setModel(new javax.swing.table.DefaultTableModel(
                 string,str
         ));
-        jTable1.repaint();   
+        ipTable.repaint();
         
         reachable = new Boolean[string.length];
         jLabel1.setText("List of Adapters Currently Active for Virtual Box ("+ipAddresses.size()+")");
+        jLayeredPane5.setVisible(false);
     }
     
-    private void updateDHCP(){
-        for(int i = 0; i < ipAddresses.size(); ++i){
-            String dhcp = "dhcpserver modify --netname \"[hostonlyname]\" -ip [ipaddress] --netmask 255.255.255.0 --lowerip [ipaddresslower] --upperip [ipaddressupper] --enable";
-            dhcp = dhcp.replace("[hostonlyname]",ipAddresses.get(i)[0]);
-            dhcp = dhcp.replace("[ipaddress]",ipAddresses.get(i)[1]);
-            dhcp = dhcp.replace("[ipaddressupper]",ipAddresses.get(i)[1].substring(0,ipAddresses.get(i)[1].lastIndexOf('.'))+".101");
-            dhcp = dhcp.replace("[ipaddresslower]",ipAddresses.get(i)[1].substring(0,ipAddresses.get(i)[1].lastIndexOf('.'))+".254");
-            
-            String[] m = dhcp.split(" ");
-            String[] n = new String[m.length+1];
-            n[0] = vboxdir;
-            
-            System.arraycopy(m,0,n,1,m.length);
-            SwingWorker workerDHCP = new SwingWorker<String,Void>(){
+    public ArrayList<String[]> getIPAddresses(){
+        return ipAddresses;
+    }
+    
+    public void createHostOnlyDHCP(){
+        if(recreateDHCPServer){
+            --fixedCount;
+            if(fixedCount == 0){
+                recreateDHCPServer = false;
+            }
+        }
+        
+        runCommand(new String[]{vboxdir,"hostonlyif","create"},true,"updateDHCPServer,testing,testing,testing",false,"Creating New Adapter");
+    }
+    
+    private void updateDHCPServer(String adapterName, String ipAddress) throws IOException{
+            String adapterInfo = adapterName.replace("HostInterfaceNetworking-","");
+            SwingWorker worker = new SwingWorker() {
                 @Override
-                protected String doInBackground() throws Exception {
+                protected Object doInBackground() throws Exception {
                     try{
-                        Process run = Runtime.getRuntime().exec(n);
-                    } catch(IOException ex){
+                        Process process = Runtime.getRuntime().exec(new String[]{vboxdir,"list","dhcpservers"});
+                        BufferedReader br = new BufferedReader(new InputStreamReader(process.getInputStream()));
+                        String string = "";
+                        
+                        ArrayList adapters = new ArrayList<>();
+                        while((string = br.readLine()) != null){
+                            if(string.contains("NetworkName: ")){
+                                String[] info = string.split(":    ");
+                                adapters.add(info[1]);
+                            }
+                        }
+                        
+                        Boolean adapterAdded = false;
+                        for(int i = 0; i < adapters.size(); ++i){
+                            if(adapterName.contains(adapters.get(i).toString())){
+                                Process dhcpProcess = Runtime.getRuntime().exec(new String[]{vboxdir,"dhcpserver","modify","--netmask","255.255.255.0","--netname","\""+adapterName+"\"","--ip",ipAddress,"--upperip",ipAddress.substring(0,ipAddress.lastIndexOf('.')+1)+"254","--lowerip",ipAddress.substring(0,ipAddress.lastIndexOf('.')+1)+"101","--enable"});
+                                adapterAdded = true;
+                                break;
+                            }
+                        }
+                        
+                        if(!adapterAdded){
+                            Process dhcpserver = Runtime.getRuntime().exec(new String[]{vboxdir,"dhcpserver","add","--netmask","255.255.255.0","--netname",adapterName,"--ip",ipAddress,"--lowerip",ipAddress.substring(0,ipAddress.lastIndexOf('.')+1)+"101","--upperip",ipAddress.substring(0,ipAddress.lastIndexOf('.')+1)+"255"});
+                            BufferedReader bh = new BufferedReader(new InputStreamReader(dhcpserver.getInputStream()));
+                            String str = "";
+                            
+                            while((str = bh.readLine()) != null){
+                                System.out.println(str);
+                            }
+                        }
+                    }catch(IOException ex){
                         System.out.println(ex);
                     }
                     return "";
                 }
+               
+                @Override
+                public void done(){
+                    
+                }
             };
-            workerDHCP.execute();
+            worker.execute();
+    }
+    
+    private void removeDHCP(String adapterName){
+        try{
+            String[] testing = new String[]{vboxdir,"dhcpserver","remove","\""+adapterName+"\""};
+            Process dhcpProcess = Runtime.getRuntime().exec(new String[]{vboxdir,"dhcpserver","remove","\""+adapterName+"\""});
+            BufferedReader br = new BufferedReader(new InputStreamReader(dhcpProcess.getInputStream()));
+        }catch(IOException ex){
+            System.out.println("Exception info: "+ex);
         }
     }
     
-    private void testing(){
-        System.out.println("testing");
+    private void updateDHCP(){
+        ArrayList<SwingWorker> workerDHCP = new ArrayList<>();
+        for(int i = 0; i < ipAddresses.size(); ++i){
+            String dhcp;
+            Boolean removeIP = false;
+            String ipaddressName = ipAddresses.get(i)[0];
+            String ipaddress = ipAddresses.get(i)[1];
+            if(ipAddresses.get(i)[1].contains("169.254")){
+                Boolean testReset = false;
+                if(fixedHost.size() > 0){
+                    for(int u = 0; u < fixedHost.size(); ++u){
+                        if(fixedHost.get(u).equals(ipaddressName)) {
+                            testReset = true;
+                        } else {
+                        }
+                    }
+                }
+                
+                if(!testReset){
+                    fixedHost.add(ipaddressName);
+                    recreateDHCPServer = true;
+                    ++fixedCount;
+                    removeIP = true;
+
+                    dhcp = "dhcpserver remove --netname \"[hostonlyname]\"";
+                    dhcp = dhcp.replace("[hostonlyname]",ipaddressName.replace("HostInterfaceNetworking-",""));
+                } else {
+                    dhcp = "";
+                }
+            }
+            
+            try{
+                if(removeIP){
+                    removeAdapter(ipaddressName,ipaddress);
+                } else {
+                    updateDHCPServer(ipaddressName,ipaddress);
+                }
+            }catch(IOException ex){
+                System.out.println("something ... "+ex);
+            }
+        }
     }
     
-    private void jMenu2ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jMenu2ActionPerformed
-        
-    }//GEN-LAST:event_jMenu2ActionPerformed
-
-    private void jMenuItem1ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jMenuItem1ActionPerformed
-       config.setVisible(true);
-    }//GEN-LAST:event_jMenuItem1ActionPerformed
-
     public void addServer(String serverName,String serverIP,String serverMask,String serverGateway){
         System.out.println(serverName);
     }
-    
-    private void jMenuItem3ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jMenuItem3ActionPerformed
-        setupServerHome();
-    }//GEN-LAST:event_jMenuItem3ActionPerformed
-
-    private void jMenuItem2ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jMenuItem2ActionPerformed
-        createServer.setVisible(true);
-    }//GEN-LAST:event_jMenuItem2ActionPerformed
-
-    private void jMenuItem4ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jMenuItem4ActionPerformed
-        serverCreation.setVisible(true);
-        serverCreation.setupFrame();
-    }//GEN-LAST:event_jMenuItem4ActionPerformed
-    
-    private void jMenuItem5ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jMenuItem5ActionPerformed
-        setupServerHome(false);
-    }//GEN-LAST:event_jMenuItem5ActionPerformed
-
-    private void jMenu3ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jMenu3ActionPerformed
         
-    }//GEN-LAST:event_jMenu3ActionPerformed
-
-    private void jMenuItem6ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jMenuItem6ActionPerformed
-        resumeDownloads();
-    }//GEN-LAST:event_jMenuItem6ActionPerformed
-
-    private void jMenuItem7ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jMenuItem7ActionPerformed
-        // TODO add your handling code here:
-    }//GEN-LAST:event_jMenuItem7ActionPerformed
-
-    private void jMenuItem8ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jMenuItem8ActionPerformed
-        // TODO add your handling code here:
-    }//GEN-LAST:event_jMenuItem8ActionPerformed
-
-    private void jMenu4ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jMenu4ActionPerformed
-        // TODO add your handling code here:
-    }//GEN-LAST:event_jMenu4ActionPerformed
-
-    private void jMenuItem9ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jMenuItem9ActionPerformed
-        // TODO add your handling code here:
-    }//GEN-LAST:event_jMenuItem9ActionPerformed
-
     private void jButton4ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jButton4ActionPerformed
         setupIPTable();
     }//GEN-LAST:event_jButton4ActionPerformed
 
-    private void jLabel8MouseEntered(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_jLabel8MouseEntered
-        // TODO add your handling code here:
-    }//GEN-LAST:event_jLabel8MouseEntered
-
-    private void jLabel8MouseClicked(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_jLabel8MouseClicked
-        Runtime.getRuntime().halt(0);
-    }//GEN-LAST:event_jLabel8MouseClicked
-
     private void jButton3ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jButton3ActionPerformed
-        processVboxmanage("create","null");
+        createHostOnlyDHCP();
     }//GEN-LAST:event_jButton3ActionPerformed
 
-    private void jTable1MouseClicked(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_jTable1MouseClicked
-        int n = JOptionPane.showConfirmDialog(
-            this,
-            "Do you really want to delete the IPAddress",
-            "Delete Clicked IP Address",
-            JOptionPane.YES_NO_OPTION);
-        if(n == JOptionPane.YES_OPTION){
-            String adapterName = ipAddresses.get(jTable1.getSelectedRow())[0];
-            setupVBoxDir();
-            runCommand(new String[]{vboxdir,"hostonlyif","remove","\""+adapterName.replace("HostInterfaceNetworking-","")+"\""},true,"setupIPTable",false,"Removing Host-Only Adapter");
+    private void removeAdapter(String hostName,String dhcp){
+        fixedHost.add(hostName);
+        runCommand(new String[]{vboxdir,"hostonlyif","remove","\""+hostName.replace("HostInterfaceNetworking-","")+"\""},true,"removeDHCPServer",true,"Removing Host-Only Adapter");
+    }
+    
+    public void removeDHCPServer(){
+        String continuedFunction;
+        
+        if(recreateDHCPServer){
+            continuedFunction = "createHostOnlyDHCP";
+        } else {
+            continuedFunction = "testing";
         }
-    }//GEN-LAST:event_jTable1MouseClicked
+        runCommand(new String[]{vboxdir,"dhcpserver","remove","--netname","\""+fixedHost.get(0)+"\""},true,continuedFunction,true,"Delete registered DCHP Server");
+    }
+        
+    private void ipTableMousePressed(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_ipTableMousePressed
+        showDHCPFrame();
+    }//GEN-LAST:event_ipTableMousePressed
+    
+    private void jLabel7MouseClicked(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_jLabel7MouseClicked
+        System.exit(0);
+    }//GEN-LAST:event_jLabel7MouseClicked
 
-    private void jButton2ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jButton2ActionPerformed
-        //read config file for rewriting
-        readConfigFile();
-        //setup vbox directory for processing processes
-        setupVBoxDir();
-    }//GEN-LAST:event_jButton2ActionPerformed
+    private void AdapterTabMousePressed(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_AdapterTabMousePressed
+        tabSelect(1);
+    }//GEN-LAST:event_AdapterTabMousePressed
 
-    private void jButton1ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jButton1ActionPerformed
-        // TODO add your handling code here:
-    }//GEN-LAST:event_jButton1ActionPerformed
+    private void AdapterTabTextMousePressed(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_AdapterTabTextMousePressed
+        tabSelect(1);
+    }//GEN-LAST:event_AdapterTabTextMousePressed
 
+    private void ServerTabTextMouseClicked(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_ServerTabTextMouseClicked
+        tabSelect(0);
+    }//GEN-LAST:event_ServerTabTextMouseClicked
+
+    private void ServerTabMouseClicked(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_ServerTabMouseClicked
+        tabSelect(0);
+    }//GEN-LAST:event_ServerTabMouseClicked
+
+    private void jPanel4MouseEntered(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_jPanel4MouseEntered
+        
+    }//GEN-LAST:event_jPanel4MouseEntered
+
+    private void tabSelect(int option){
+        int deselect = 1;
+        if(option == 1){
+            deselect = 0;
+            jPanel1.setVisible(true);
+            jPanel2.setVisible(false);
+        } else {
+            jPanel1.setVisible(false);
+            jPanel2.setVisible(true);
+        }
+        
+        AdapterTab.setBackground(TabSelectColors.get(option));
+        ServerTab.setBackground(TabSelectColors.get(deselect));
+    }
+    
+    /*private JComboBox getServerList(){
+        Process process = Runtime.getRuntime().exec(new String[]{vboxdir,"list","vms"});
+            BufferedReader serverReader = new BufferedReader(new InputStreamReader(process.getInputStream()));
+
+            String string = "";
+            ArrayList<String> serverList = new ArrayList<>();
+            Map v = compileServers();
+            int count = 0;
+            while((string = serverReader.readLine()) != null){
+                Pattern pattern = Pattern.compile("\"(.*)\" \\{(.*)\\}");
+                Matcher m = pattern.matcher(string);
+                if(m.find()){
+                    serverSelect.addItem(m.group(1));
+                    String check = "";
+                    if(v.get(ipAddresses.get(ipTable.getSelectedRow())[0].replace("HostInterfaceNetworking-","")) != null){
+                        check = v.get(ipAddresses.get(ipTable.getSelectedRow())[0].replace("HostInterfaceNetworking-","")).toString();
+                    }
+                    Boolean b = check.contains(m.group(1));
+                    if(b){
+                        serverSelect.setSelectedItem(count);
+                    }
+                    ++count;
+                }
+            }
+    }*/
+    
+    private JComboBox getServerList(){
+        JComboBox serverSelect = new JComboBox();
+        try{
+            mapServers.keySet().forEach((str) -> {
+                serverSelect.addItem(mapServers.get(str));
+            });
+        }catch(Exception ex){
+            System.out.println(ex);
+        }
+        return serverSelect;
+    }
+    
+    private void showDHCPFrame(){
+        updateDHCPFrameVisible.dispose();
+        updateDHCPFrameVisible = new JFrame("Select Server "+ipAddresses.get(ipTable.getSelectedRow())[0].replace("HostInterfaceNetworking-Virtual",""));
+        
+        JPanel jpanel = new JPanel();
+        
+        JLayeredPane layeredPane = new JLayeredPane();
+        JComboBox serverSelect = getServerList();
+        Dimension itemD = new Dimension(525,25);
+        serverSelect.setPreferredSize(itemD);
+        
+        jpanel.add(serverSelect);
+
+        JButton submitButton = new JButton("Set Server DHCP");
+        JButton startButton = new JButton("Start Server");
+        JButton setupDHCPButton = new JButton("Update DHCP");
+        JButton removeButton = new JButton("Remove DHCP");
+        JPanel buttons = new JPanel();
+        JLayeredPane closeContainer = new JLayeredPane();
+        JLabel closeText = new JLabel();
+        JLabel textInfo = new JLabel();
+        buttons.add(submitButton);
+        buttons.add(startButton);
+        buttons.add(setupDHCPButton);
+        buttons.add(removeButton);
+        
+        closeText.setText("close");
+        closeText.setIcon(new ImageIcon(getClass().getResource("/information/images/close_button.png").getFile()));
+                
+        textInfo.setText("Updating "+ipAddresses.get(ipTable.getSelectedRow())[0].replace("HostInterfaceNetworking-",""));
+        textInfo.setForeground(new java.awt.Color(244,244,244));
+        textInfo.setBounds(10,-10,300,50);
+        
+        closeContainer.add(closeText);
+        closeContainer.add(textInfo);
+        
+        removeButton.addActionListener((ActionEvent e) -> {
+            removeAdapter(ipAddresses.get(ipTable.getSelectedRow())[0],ipAddresses.get(ipTable.getSelectedRow())[1]);
+        });
+        
+        updateDHCPFrameVisible.addMouseListener(new MouseAdapter(){
+            public void mousepressed(){
+                updateDHCPFrameVisible.dispose();
+            }
+        });
+        
+        updateDHCPFrameVisible.addMouseMotionListener(new MouseAdapter(){
+            @Override
+            public void mouseDragged(MouseEvent evt) {
+                updateDHCPFrameVisible.setBounds(evt.getX()+updateDHCPFrameVisible.getX()-mouseOrigin[0],evt.getY()+updateDHCPFrameVisible.getY()-mouseOrigin[1],updateDHCPFrameVisible.getWidth(),updateDHCPFrameVisible.getHeight());
+            }
+        });
+        
+        VBox parent = this;
+        updateDHCPFrameVisible.addMouseListener(new MouseAdapter(){
+            @Override
+            public void mousePressed(MouseEvent e) {
+                mouseOrigin = new int[]{e.getX(),e.getY()};
+            }
+        });
+        
+        closeText.addMouseListener(new MouseAdapter(){
+            @Override
+            public void mousePressed(MouseEvent e) {
+                updateDHCPFrameVisible.dispose();
+            }
+        });
+        
+        Color backgroundColor = new java.awt.Color(54,54,54);
+        
+        closeText.setHorizontalAlignment(javax.swing.SwingConstants.RIGHT);
+        closeText.setForeground(new java.awt.Color(240,240,240));
+        closeText.setBounds(440,0,100,30);
+        closeContainer.setBounds(0,0,550,30);
+        jpanel.setBounds(0,30,550,30);
+        buttons.setBounds(0,60,550,50);
+        
+        jpanel.setBackground(backgroundColor);
+        buttons.setBackground(backgroundColor);
+        closeContainer.setBackground(backgroundColor);
+        closeContainer.setOpaque(true);
+        closeContainer.setVisible(true);
+        
+        layeredPane.setOpaque(true);
+        
+        layeredPane.add(closeContainer);
+        layeredPane.add(jpanel);
+        layeredPane.add(buttons);
+        layeredPane.setBounds(30,0,550,170);
+        
+        updateDHCPFrameVisible.setUndecorated(true);
+        updateDHCPFrameVisible.add(layeredPane);
+        
+        startButton.addActionListener((ActionEvent e) -> {
+            String server = serverSelect.getSelectedItem().toString();
+            try{
+                Process process = Runtime.getRuntime().exec(new String[]{vboxdir,"startvm","\""+server+"\""});
+                startVM();
+            }catch(IOException ex){
+                System.out.println(ex);
+            }
+            setupIPTable();
+            updateDHCPFrameVisible.dispose();
+        });
+        
+        submitButton.addActionListener((ActionEvent e) -> {
+            String[] pauseServer = new String[]{vboxdir,"controlvm","\""+serverSelect.getSelectedItem()+"\"","pause"};
+            //String[] saveServer = new String[]{vboxdir,"controlvm","\""+serverSelect.getSelectedItem()+"\"","savestate"};
+            String[] setupServerAdapter = new String[]{vboxdir,"modifyvm","\""+serverSelect.getSelectedItem()+"\"","--nic2","hostonly","--hostonlyadapter2","\""+ipAddresses.get(ipTable.getSelectedRow())[0].replace("HostInterfaceNetworking-","")+"\""};
+            String[] startServer = new String[]{vboxdir,"startvm","\""+serverSelect.getSelectedItem()+"\""};
+            try{
+                //Runtime.getRuntime().exec(saveServer);
+                Process process = Runtime.getRuntime().exec(pauseServer);
+                BufferedReader bf = new BufferedReader(new InputStreamReader(process.getInputStream()));
+                
+                String sl = "";
+                while((sl = bf.readLine()) != null){
+                    System.out.println(sl);
+                }
+                process = Runtime.getRuntime().exec(setupServerAdapter);
+                for(int i = 0; i < setupServerAdapter.length; ++i){
+                    System.out.print(setupServerAdapter[i]+" ");
+                }
+                System.out.println();
+                while((sl = bf.readLine()) != null){
+                    System.out.println(sl);
+                }
+                process = Runtime.getRuntime().exec(startServer);
+                for(int i = 0; i < startServer.length; ++i){
+                    System.out.print(startServer[i]+" ");
+                }
+                System.out.println();
+                while((sl = bf.readLine()) != null){
+                    System.out.println(sl);
+                }
+                String string = "";
+            }catch(IOException ex){
+                System.out.println(ex);
+            }
+            setupIPTable();
+            updateDHCPFrameVisible.dispose();
+        });
+
+        setupDHCPButton.addActionListener((ActionEvent e) -> {
+            try {
+                updateDHCPServer(ipAddresses.get(ipTable.getSelectedRow())[0],ipAddresses.get(ipTable.getSelectedRow())[1]);
+                setupIPTable();
+                updateDHCPFrameVisible.dispose();
+            } catch (IOException ex) {
+                Logger.getLogger(VBox.class.getName()).log(Level.SEVERE, null, ex);
+            }
+        });
+        
+        updateDHCPFrameVisible.setBounds(0,0,550,100);
+        updateDHCPFrameVisible.setLocationRelativeTo(null);
+        updateDHCPFrameVisible.setVisible(true);
+    }
+    
     /* used to grab virtual box directory */
     public String getVBoxDir(){
         return vboxdir;
@@ -1327,7 +1783,7 @@ public class VBox extends javax.swing.JFrame {
         
         try{
             BufferedReader out = new BufferedReader(new FileReader(commands));
-            ArrayList<String[]> arraylist = new ArrayList<String[]>();
+            ArrayList<String[]> arraylist = new ArrayList<>();
             String isoHolder = "";
             if(isoFile.length() > 0){
                 File fileChecker = new File(isoFile);
@@ -1397,7 +1853,6 @@ public class VBox extends javax.swing.JFrame {
     
     public void runCommandsSync(){
         if(count == commandList.size()){
-            return;
         } else {
             runCommand(commandList.get(count),true,"runCommandsSync",true,commandText.get(count));
             ++count;
@@ -1415,8 +1870,19 @@ public class VBox extends javax.swing.JFrame {
         runCommand(vboxHolder,true,"createVM",true,"Creating VMs");
     }
     
+    public void setStartedVM(String startedVM){
+        mostRecentVM  = startedVM;
+        this.startedVM.put(startedVM,"started");
+    }
+    
+    public Map<String,String> getStartedVM(){
+        return startedVM;
+    }
+    
     public void startVM(){
-        System.out.println("VM Starting ...");
+        VMStarted vmstarted = new VMStarted(this,mostRecentVM);
+        vmstarted.setVisible(true);
+        vmstarted.setLocationRelativeTo(null);
     }
     
     /**
@@ -1449,37 +1915,32 @@ public class VBox extends javax.swing.JFrame {
     }
 
     // Variables declaration - do not modify//GEN-BEGIN:variables
-    private javax.swing.JButton jButton1;
-    private javax.swing.JButton jButton2;
+    private javax.swing.JPanel AdapterTab;
+    private javax.swing.JLabel AdapterTabText;
+    private javax.swing.JPanel ServerTab;
+    private javax.swing.JLabel ServerTabText;
+    private javax.swing.JTable ipTable;
     private javax.swing.JButton jButton3;
     private javax.swing.JButton jButton4;
     private javax.swing.JFileChooser jFileChooser1;
     private javax.swing.JLabel jLabel1;
     private javax.swing.JLabel jLabel2;
+    private javax.swing.JLabel jLabel3;
     private javax.swing.JLabel jLabel4;
     private javax.swing.JLabel jLabel5;
     private javax.swing.JLabel jLabel6;
-    private javax.swing.JLabel jLabel8;
+    private javax.swing.JLabel jLabel7;
     private javax.swing.JLayeredPane jLayeredPane1;
     private javax.swing.JLayeredPane jLayeredPane2;
+    private javax.swing.JLayeredPane jLayeredPane3;
     private javax.swing.JLayeredPane jLayeredPane4;
-    private javax.swing.JMenu jMenu1;
-    private javax.swing.JMenu jMenu2;
-    private javax.swing.JMenu jMenu3;
-    private javax.swing.JMenu jMenu4;
-    private javax.swing.JMenuBar jMenuBar1;
-    private javax.swing.JMenuItem jMenuItem1;
-    private javax.swing.JMenuItem jMenuItem2;
-    private javax.swing.JMenuItem jMenuItem3;
-    private javax.swing.JMenuItem jMenuItem4;
-    private javax.swing.JMenuItem jMenuItem5;
-    private javax.swing.JMenuItem jMenuItem6;
-    private javax.swing.JMenuItem jMenuItem7;
-    private javax.swing.JMenuItem jMenuItem8;
-    private javax.swing.JMenuItem jMenuItem9;
+    private javax.swing.JLayeredPane jLayeredPane5;
+    private javax.swing.JPanel jPanel1;
+    private javax.swing.JPanel jPanel2;
+    private javax.swing.JPanel jPanel3;
+    private javax.swing.JLayeredPane jPanel4;
     private javax.swing.JProgressBar jProgressBar1;
     private javax.swing.JScrollPane jScrollPane2;
-    private javax.swing.JTable jTable1;
     // End of variables declaration//GEN-END:variables
 
     private void formMouseDragged(java.awt.event.MouseEvent evt) {                                  
